lang/macro/tests/ui/fail/04-missing-message.stderr
error: ink! contracts require at least one `#[ink(message)]`
  --> $DIR/04-missing-message.rs:4:1
   |
4  | / mod noop {
5  | |     #[ink(storage)]
6  | |     struct Noop {}
7  | |
...  |
11 | |     }
12 | | }
   | |_^
